Basic Domain specification

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -12,10 +12,31 @@
 \section{Introduction}
 
 \section{Domain}
+Trambaan van Delft naar Rotterdam
+
+TU Delft
+Gemeente Delft
+BAM
+
+Bovenleiding (wel, niet)
+Brughoogte (hoog, middel, laag)
+Frequentie van tramverkeer (1, 2, 4 per uur)
+Wat is het budget (1, 2, 3 mln)
+Tramstellen (tweedehands, nieuw)
+Tot waar moet ie rijden (TU Delft Campus, Delft Zuid, Rotterdam)
+Opleverdatum (2016, 2017, 2018)
+
 
 \section{Negotiation Scenarios}
-\subsection{Scenario 1}
-\subsection{Preference Profile 1}
+
+\subsection{Scenario 1: Collaborative}
+
+
+\subsection{Scenario 2: Moderate}
+
+
+\subsection{Scenario 3: Conflicting}
+
 
 
 \end{document}
