--- a/doc/report.tex
+++ b/doc/report.tex
@@ -30,7 +30,32 @@ Opleverdatum (2016, 2017, 2018)
 \section{Negotiation Scenarios}
 
 \subsection{Scenario 1: Collaborative}
+TU Delft
+0.1 Bovenleiding (niet)
+0.1 Brughoogte (laag)
+0.6 Frequentie van tramverkeer (4 per uur)
+0.2 Wat is het budget (2 mln)
+0.1 Tramstellen (nieuw)
+0.4 Tot waar moet ie rijden (TU Delft Campus)
+0.1 Opleverdatum (2016)
 
+Gemeente Delft
+0.5 Bovenleiding (wel)
+0.3 Brughoogte (hoog)
+0.6 Frequentie van tramverkeer (4 per uur)
+0.8 Wat is het budget (2 mln)
+0.5 Tramstellen (tweedehands)
+0.1 Tot waar moet ie rijden (Delft Zuid)
+0.1 Opleverdatum (2016)
+
+BAM
+0.5 Bovenleiding (wel)
+0.1 Brughoogte (laag)
+0.1 Frequentie van tramverkeer (4 per uur)
+0.6 Wat is het budget (2 mln)
+0.1 Tramstellen (nieuw)
+0.1 Tot waar moet ie rijden (Rotterdam)
+0.8 Opleverdatum (2018)
 
 \subsection{Scenario 2: Moderate}
 
