Added profiles for collaborative.

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -26,7 +26,6 @@ Tramstellen (tweedehands, nieuw)
 Tot waar moet ie rijden (TU Delft Campus, Delft Zuid, Rotterdam)
 Opleverdatum (2016, 2017, 2018)
 
-
 \section{Negotiation Scenarios}
 
 \subsection{Scenario 1: Collaborative}
@@ -34,6 +33,41 @@ Opleverdatum (2016, 2017, 2018)
 
 \subsection{Scenario 2: Moderate}
 
+\subsubsection*{TU Delft}
+Overhead line, no \textgreater yes \\
+Height of the bridge, middel  \textgreater high \textgreater low \\
+Frequency trams, 2 \textgreater 4 \textgreater 1 \\
+Budget, 2 \textgreater 1 \textgreater 3 \\
+Carriage, new \textgreater old \\
+Destination, Delft Zuid \textgreater TU Delft Campus \textgreater Rotterdam \\
+Delivery, 2017 \textgreater 2016 \textgreater 2018 \\
+
+
+Frequency trams \textgreater overhead line \textgreater budget \textgreater carriage \textgreater delivery \textgreater height of the bridge \textgreater destination \\
+
+\subsubsection*{Delft Municipality}
+Overhead line, yes \\
+Height of the bridge, middel \\
+Frequency trams, 2 \\
+Budget, 1 \\
+Carriage, new \\
+Destination, Delft Zuid \\
+Delivery, 2017 \\
+
+
+Budget \textgreater delivery \textgreater height of the bridge \textgreater Frequency trams \textgreater destination \textgreater overhead line \textgreater carriage\\
+
+\subsubsection*{BAM}
+Overhead line, yes \\
+Height of the bridge, middel \\
+Frequency trams, 2 \\
+Budget, 3 \\
+Carriage, new \\
+Destination, Rotterdam \\
+Delivery, 2018 \\
+
+
+Budget \textgreater destination \textgreater delivery \textgreater overhead line \textgreater height of the bridge \textgreater Frequency trams \textgreater carriage\\
 
 \subsection{Scenario 3: Conflicting}
 
