--- a/doc/report.tex
+++ b/doc/report.tex
@@ -35,8 +35,41 @@ Opleverdatum (2016, 2017, 2018)
 \subsection{Scenario 2: Moderate}
 
 
-\subsection{Scenario 3: Conflicting}
+\subsection{Scenario 3: Competitive}
+\subsubsection{TU Delft}
+Overhead line: no \textgreater yes \\
+Bridge height: low \textgreater middle \textgreater high \\
+Traffic frequency: 1 \textgreater 4 \textgreater 2 times per hour \\
+Budget: 2 \textgreater 3 \textgreater 1 \\
+Tram carriages: new \textgreater 2nd hand \\
+Destination: TU Delft Campus \textgreater Rotterdam \textgreater Delft Zuid \\
+Year of delivery: 2017 \textgreater 2018 \textgreater 2016 \\
 
+Tram carriages \textgreater Overhead line \textgreater Bridge height \textgreater Traffic frequency \textgreater Budget \textgreater Year of delivery \textgreater Destination\\
+
+
+\subsection{Gemeente Delft}
+Overhead line: yes \textgreater no \\
+Bridge height: high \textgreater middle \textgreater low \\
+Traffic frequency: 2 \textgreater 1 \textgreater 4 times per hour \\
+Budget: 1 \textgreater 2 \textgreater 3 mln \\
+Tram carriages: 2nd hand \textgreater new \\
+Destination: Delft Zuid \textgreater TU Delft Campus \textgreater Rotterdam \\
+Year of delivery: 2016 \textgreater 2017 \textgreater 2018 \\
+
+Budget \textgreater Year of delivery \textgreater Tram carriages \textgreater Bridge height \textgreater Overhead line \textgreater Destination \textgreater Traffic frequency\\
+
+
+\subsection{BAM}
+Overhead line: yes \textgreater no \\
+Bridge height: middle \textgreater low \textgreater high \\
+Traffic frequency: 4 \textgreater 2 \textgreater 1 times per hour \\
+Budget: 3 \textgreater 2 \textgreater 1 mln \\
+Tram carriages: 2nd hand \textgreater new \\
+Destination: Rotterdam \textgreater Delft Zuid \textgreater TU Delft Campus \\
+Year of delivery: 2018 \textgreater 2017 \textgreater 2016 \\
+
+Budget \textgreater Year of delivery \textgreater Destination \textgreater Overhead line \textgreater Traffic frequency \textgreater Tram carriages \textgreater Bridge height\\
 
 
 \end{document}
