update competitive scenario

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -79,7 +79,7 @@ Year of delivery: 2017 \textgreater 2018 \textgreater 2016 \\
 Tram carriages \textgreater Overhead line \textgreater Bridge height \textgreater Traffic frequency \textgreater Budget \textgreater Year of delivery \textgreater Destination\\
 
 
-\subsection{Gemeente Delft}
+\subsubsection{Delft Municipality}
 Overhead line: yes \textgreater no \\
 Bridge height: high \textgreater middle \textgreater low \\
 Traffic frequency: 2 \textgreater 1 \textgreater 4 times per hour \\
@@ -91,7 +91,7 @@ Year of delivery: 2016 \textgreater 2017 \textgreater 2018 \\
 Budget \textgreater Year of delivery \textgreater Tram carriages \textgreater Bridge height \textgreater Overhead line \textgreater Destination \textgreater Traffic frequency\\
 
 
-\subsection{BAM}
+\subsubsection{BAM}
 Overhead line: yes \textgreater no \\
 Bridge height: middle \textgreater low \textgreater high \\
 Traffic frequency: 4 \textgreater 2 \textgreater 1 times per hour \\
