Added removed ordinality for collaborative

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -73,30 +73,27 @@ Carriage, new \textgreater old \\
 Destination, Delft Zuid \textgreater TU Delft Campus \textgreater Rotterdam \\
 Delivery, 2017 \textgreater 2016 \textgreater 2018 \\
 
-
 Frequency trams \textgreater overhead line \textgreater budget \textgreater carriage \textgreater delivery \textgreater height of the bridge \textgreater destination \\
 
 \subsubsection*{Delft Municipality}
-Overhead line, yes \\
-Height of the bridge, middel \\
-Frequency trams, 2 \\
-Budget, 1 \\
-Carriage, new \\
-Destination, Delft Zuid \\
-Delivery, 2017 \\
-
+Overhead line, yes \textgreater no\\
+Height of the bridge, middel \textgreater high \textgreater low \\
+Frequency trams, 2 \textgreater 4 \textgreater 3 \\
+Budget, 1 \textgreater 2 \textgreater 3\\
+Carriage, new \textgreater second hand\\
+Destination, Delft Zuid \textgreater Rotterdam \textgreater TU Delft\\
+Delivery, 2017 \textgreater 2016 \textgreater 2018\\
 
 Budget \textgreater delivery \textgreater height of the bridge \textgreater Frequency trams \textgreater destination \textgreater overhead line \textgreater carriage\\
 
 \subsubsection*{BAM}
-Overhead line, yes \\
-Height of the bridge, middel \\
-Frequency trams, 2 \\
-Budget, 3 \\
-Carriage, new \\
-Destination, Rotterdam \\
-Delivery, 2018 \\
-
+Overhead line, yes \textgreater no\\
+Height of the bridge, middle \textgreater high \textgreater low\\
+Frequency trams, 2 \textgreater 4 \textgreater 1\\
+Budget, 3 \textgreater 2 \textgreater 1\\
+Carriage, new \textgreater second hand\\
+Destination, Rotterdam \textgreater Delft Zuid \textgreater TU Delft\\
+Delivery, 2018 \textgreater 2017 \textgreater 2016 \\
 
 Budget \textgreater destination \textgreater delivery \textgreater overhead line \textgreater height of the bridge \textgreater Frequency trams \textgreater carriage\\
 
