basic strategy report

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -135,4 +135,30 @@ Year of delivery: 2018 \textgreater 2017 \textgreater 2016 \\
 Budget \textgreater Year of delivery \textgreater Destination \textgreater Overhead line \textgreater Traffic frequency \textgreater Tram carriages \textgreater Bridge height\\
 
 
+\section{Strategy}
+
+\subsection{Global principles}
+To be held as long as feasible.
+\begin{itemize}
+\item Never go to the left of the Kalai-Smorodinsky point
+\item Get more reluctant when nearing vertical Nash-line
+\end{itemize}
+
+\subsection{Actions}
+Start at maximum utility\\
+
+\noindent
+In order of importance
+\begin{itemize}
+\item Learn opponents preferences
+\item When wanting something, first bid below Pareto-line; when not accepted give in by going vertically up (not losing anything)
+\item Get more agreeable when other is threatening to walk away, or when deadline is nearing
+\end{itemize}
+
+Accept bids when:
+\begin{itemize}
+\item If own utility is not reduced
+\item 
+\end{itemize}
+
 \end{document}
