the nine strategy profiles

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -30,7 +30,7 @@ Opleverdatum (2016, 2017, 2018)
 
 \subsection{Scenario 1: Collaborative}
 
-\subsubsection{TU Delft}
+\subsubsection*{TU Delft}
 Overhead line: no \textgreater yes \\
 Bridge height: low \textgreater middle \textgreater high \\
 Traffic frequency: 4 \textgreater 2 \textgreater 1 times per hour \\
@@ -39,9 +39,9 @@ Tram carriages: new \textgreater used \\
 Destination: TU Delft Campus \textgreater Delft Zuis \textgreater Rotterdam \\
 Year of delivery: 2016 \textgreater 2017 \textgreater 2018 \\
 
-Traffic frequency \textgreater Destination Budget \textgreater Overhead line \textgreater Bridge height \textgreater Tram carriages \textgreater Year of delivery
+Traffic frequency \textgreater Destination \textgreater Budget \textgreater Overhead line \textgreater Bridge height \textgreater Tram carriages \textgreater Year of delivery
 
-\subsection{Gemeente Delft}
+\subsubsection*{Delft Municipality}
 Overhead line: yes \textgreater no \\
 Bridge height: high \textgreater middle \textgreater low \\
 Traffic frequency: 4 \textgreater 2 \textgreater 1 times per hour \\
@@ -52,7 +52,7 @@ Year of delivery: 2016 \textgreater 2017 \textgreater 2018 \\
 
 Budget \textgreater Traffic frequency \textgreater Overhead line \textgreater Tram carriages \textgreater Bridge height \textgreater Destination \textgreater Year of delivery
 
-\subsection{BAM}
+\subsubsection*{BAM}
 Overhead line: yes \textgreater no \\
 Bridge height: low \textgreater middle \textgreater high \\
 Traffic frequency: 4 \textgreater 2 \textgreater 1 times per hour \\
@@ -79,7 +79,7 @@ Frequency trams \textgreater overhead line \textgreater budget \textgreater carr
 \subsubsection*{Delft Municipality}
 Overhead line, yes \textgreater no\\
 Height of the bridge, middel \textgreater high \textgreater low \\
-Frequency trams, 2 \textgreater 4 \textgreater 3 \\
+Frequency trams, 2 \textgreater 4 \textgreater 1 \\
 Budget, 1 \textgreater 2 \textgreater 3\\
 Carriage, new \textgreater second hand\\
 Destination, Delft Zuid \textgreater Rotterdam \textgreater TU Delft\\
@@ -99,7 +99,7 @@ Delivery, 2018 \textgreater 2017 \textgreater 2016 \\
 Budget \textgreater destination \textgreater delivery \textgreater overhead line \textgreater height of the bridge \textgreater Frequency trams \textgreater carriage\\
 
 \subsection{Scenario 3: Competitive}
-\subsubsection{TU Delft}
+\subsubsection*{TU Delft}
 Overhead line: no \textgreater yes \\
 Bridge height: low \textgreater middle \textgreater high \\
 Traffic frequency: 1 \textgreater 4 \textgreater 2 times per hour \\
@@ -111,7 +111,7 @@ Year of delivery: 2017 \textgreater 2018 \textgreater 2016 \\
 Tram carriages \textgreater Overhead line \textgreater Bridge height \textgreater Traffic frequency \textgreater Budget \textgreater Year of delivery \textgreater Destination\\
 
 
-\subsubsection{Delft Municipality}
+\subsubsection*{Delft Municipality}
 Overhead line: yes \textgreater no \\
 Bridge height: high \textgreater middle \textgreater low \\
 Traffic frequency: 2 \textgreater 1 \textgreater 4 times per hour \\
@@ -123,7 +123,7 @@ Year of delivery: 2016 \textgreater 2017 \textgreater 2018 \\
 Budget \textgreater Year of delivery \textgreater Tram carriages \textgreater Bridge height \textgreater Overhead line \textgreater Destination \textgreater Traffic frequency\\
 
 
-\subsubsection{BAM}
+\subsubsection*{BAM}
 Overhead line: yes \textgreater no \\
 Bridge height: middle \textgreater low \textgreater high \\
 Traffic frequency: 4 \textgreater 2 \textgreater 1 times per hour \\
